--- a/starter.html
+++ b/starter.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-
+    <a href="./main.html"><button>Go To Login</button></a>
     <script src="./game.js"></script>
 </body>
 </html>
