--- a/main.html
+++ b/main.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    
+<body class="main">
+    <h1>Meme Matching</h1>
+    <div class="board">
+        <div class="box image1"></div>
+        <div class="box image2"></div>
+        <div class="box image3"></div>
+        <div class="box image4"></div>
+        <div class="box image5"></div>
+        <div class="box image6"></div>
+        <div class="box image7"></div>
+        <div class="box image8"></div>
+        <div class="box image9"></div>
+        <div class="box image10"></div>
+    </div>
+    <a href="./starter.html" class="return"><button>Return to Title Page</button></a>
 </body>
 </html>
