--- a/starter.html
+++ b/starter.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    <a href="./main.html"><button>Go To Login</button></a>
+<body class="starter">
+    <h1>Welcome to the Meme Matching Game!</h1>
+    <h2>By: Ifeoluwa  Adebisi</h2>
+    <p>Click Below to Begin</p>
+    <a href="./main.html"><button>Begin Matching</button></a>
     <script src="./game.js"></script>
 </body>
 </html>
