--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <body class="main">
     <h1>Meme Matching</h1>
     <div class="board">
-        <div class="box image1"></div>
+        <div class="box image1" onclick="clicked()"></div>
         <div class="box image2"></div>
         <div class="box image3"></div>
         <div class="box image4"></div>
