Boxes for diff images

--- a/main.html
+++ b/main.html
@@ -24,6 +24,6 @@
         <div class="box image9"></div>
         <div class="box image10"></div>
     </div>
-    <a href="./starter.html" class="return"><button>Return to Title Page</button></a>
+    <a href="./index.html" class="return"><button>Return to Title Page</button></a>
 </body>
 </html>
