--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Welcome to the Meme Matching Game!</h1>
     <h2>By: Ifeoluwa  Adebisi</h2>
     <p>Click Below to Begin</p>
-    <a href="./main.html"><button>Begin Matching</button></a>
+    <a href="./main.html"><button class="begin">Begin Matching</button></a>
     <script src="./game.js"></script>
 </body>
 </html>
