--- a/main.html
+++ b/main.html
@@ -13,17 +13,24 @@
 <body class="main">
     <h1>Meme Matching</h1>
     <div class="board">
-        <div class="box image1" onclick="clicked()"></div>
-        <div class="box image2"></div>
-        <div class="box image3"></div>
-        <div class="box image4"></div>
-        <div class="box image5"></div>
-        <div class="box image6"></div>
-        <div class="box image7"></div>
-        <div class="box image8"></div>
-        <div class="box image9"></div>
-        <div class="box image10"></div>
+        <div class="box image1">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image2">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image3">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image4">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image5">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image6">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image7">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image8">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image9">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image10">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image11">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image12">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image13">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image14">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image15">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image16">( ͡° ͜ʖ ͡°)</div>
     </div>
     <a href="./index.html" class="return"><button>Return to Title Page</button></a>
+    <script src="./game.js"></script>
 </body>
 </html>
