--- a/main.html
+++ b/main.html
@@ -13,22 +13,22 @@
 <body class="main">
     <h1>Meme Matching</h1>
     <div class="board">
-        <div class="box image1">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image2">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image3">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image4">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image5">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image6">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image7">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image8">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image9">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image10">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image11">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image12">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image13">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image14">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image15">( ͡° ͜ʖ ͡°)</div>
-        <div class="box image16">( ͡° ͜ʖ ͡°)</div>
+        <div class="box image1"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image2"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image3"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image4"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image5"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image6"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image7"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image8"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image9"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image10"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image11"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image12"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image13"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image14"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image15"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
+        <div class="box image16"><img src="https://s7.gifyu.com/images/troll.png" alt="troll.png"/></div>
     </div>
     <a href="./index.html" class="return"><button>Return to Title Page</button></a>
     <script src="./game.js"></script>
