--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="starter">
     <h1>Welcome to the Meme Matching Game!</h1>
-    <h2>By: Ifeoluwa  Adebisi</h2>
+    <!-- <h2>By: Ifeoluwa  Adebisi</h2> -->
     <p>Click Below to Begin</p>
     <a href="./main.html"><button class="begin">Begin Matching</button></a>
     <script src="./game.js"></script>
