--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </head>
 <body class="main">
     <h1>Meme Matching</h1>
-    <div class="board">
+    <!-- <div class="board">
         <div class="box image1"><img src="https://s7.gifyu.com/images/troll.png" id="img1"/></div>
         <div class="box image2"><img src="https://s7.gifyu.com/images/troll.png" id="img2"/></div>
         <div class="box image3"><img src="https://s7.gifyu.com/images/troll.png" id="img3"/></div>
@@ -29,7 +29,8 @@
         <div class="box image14"><img src="https://s7.gifyu.com/images/troll.png" id="img14"/></div>
         <div class="box image15"><img src="https://s7.gifyu.com/images/troll.png" id="img15"/></div>
         <div class="box image16"><img src="https://s7.gifyu.com/images/troll.png" id="img16"/></div>
-    </div>
+    </div> -->
+    <section></section>
     <a href="./index.html" class="return"><button>Return to Title Page</button></a>
     <script src="./game.js"></script>
 </body>
