--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="starter">
     <h1>Welcome to the Meme Matching Game!</h1>
-    <!-- <h2>By: Ifeoluwa  Adebisi</h2> -->
+    <img src="https://i.kym-cdn.com/entries/icons/mobile/000/023/397/C-658VsXoAo3ovC.jpg" id="spider" alt="spider">
     <p>Click Below to Begin</p>
     <a href="./main.html"><button class="begin">Begin Matching</button></a>
     <script src="./game.js"></script>
