--- a/main.html
+++ b/main.html
@@ -12,7 +12,10 @@
 </head>
 <body class="main">
     <h1>Meme Matching</h1>
-    
+    <nav>
+        <h3 class="counter">Moves: 0</h3>
+        <h3 class="timer">00:00</h3>
+    </nav>
     <section></section>
     <button class="reset">Reset</button>
     <a href="./index.html" class="return"><button>Return to Title Page</button></a>
